# ssts-example

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  package-lock.json  package.json  tsconfig.json
.github/instructions/: main.instructions.md
.github/workflows/: ci.yml
clients/rust/: Cargo.toml  README.md
clients/typescript/: package.json
config/: program-ids.json
scripts/: audit.sh  build.sh  clippy.sh  common.sh  deploy-verification.sh  format-check.sh  format.sh  issuer-setup.sh  issuer-setup.ts  test-e2e.sh  test-unit.sh  test.sh
tests/e2e/: cpi.e2e.test.ts  helpers.ts  introspection.e2e.test.ts
verification-programs/transfer-whitelist/: Cargo.toml  README.md
verification-programs/transfer-whitelist/src/: lib.rs
