[package]
name = "transfer-whitelist"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Transfer whitelist verification program for SSTS"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []

[dependencies]
pinocchio = "0.9.2"
pinocchio-log = "0.5.0"
pinocchio-system = "0.4.0"

[workspace]
